--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    //repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
     repositories {
         google()
         mavenCentral()
@@ -11,3 +12,17 @@ dependencyResolutionManagement {
 }
 rootProject.name = "My Files"
 include ':app'
+if (1 > 0) {
+    String[] libs = ['CoreJava', 'CoreAndroid', 'CoreAndroidX']
+    for (i in 0..<libs.length) {
+        String x = libs[i]
+        include(":${x}")
+        project(":${x}").setProjectDir(new File("../MyAndroid/${x}"))
+    }
+//    include ':CoreJava'
+//    project(':CoreJava').setProjectDir(new File("../MyAndroid/CoreJava"))
+//    include ':CoreAndroid'
+//    project(':CoreAndroid').setProjectDir(new File("../MyAndroid/CoreAndroid"))
+//    include ':CoreAndroidX'
+//    project(':CoreAndroidX').setProjectDir(new File("../MyAndroid/CoreAndroidX"))
+}
