--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ buildscript {
     }
 }
 
+allprojects {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
