--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,11 @@
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
     <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"/>
-<!--    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>-->
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES"/>
 
+    <!--
+     https://developer.android.com/guide/topics/resources/runtime-changes#HandlingTheChange
+     -->
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -18,9 +21,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFiles">
-        <!--
-         https://developer.android.com/guide/topics/resources/runtime-changes#HandlingTheChange
-         -->
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
