--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFiles">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true">
             <intent-filter>
@@ -31,10 +31,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".FolderActivity"
+            android:name=".activity.FolderActivity"
             android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
             android:exported="true">
+        </activity>
 
+        <activity
+            android:name=".activity.MediaPlayerActivity"
+            android:configChanges="orientation|screenSize|screenLayout|keyboardHidden"
+            android:exported="true">
         </activity>
 
 <!--        <activity-->
